--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <style>
         html {
-            background: #343434;
+            background: #1d2630;
         }
 
         /* KEYFRAMES */
